syntax = "proto3";
package pb;

enum BindingMessageType {
  CTP_CREATE_API = 0;                   // 创建API
  CTP_RSP_CREATE_API = 1;               //
  CTP_REQ_CALL_INIT = 2;                // 初始化
  CTP_RSP_CALL_INIT = 3;                //
  CTP_REQ_USER_LOGIN = 4;               // 登陆
  CTP_RSP_USER_LOGIN = 5;               //
  CTP_REQ_SUBSCRIBE_MARKET_DATA = 6;    // 订阅
  CTP_RSP_SUBSCRIBE_MARKET_DATA = 7;    //
  CTP_ON_FRONT_CONNECTED = 8;           // 连接
  CTP_ON_FRONT_DISCONNECTED = 9;        // 断开连接
  CTP_ON_RTN_DEPTH_MARKET_DATA = 10;    // TICK行情
  CTP_ON_RTN_ORDER = 11;                // 委托
  CTP_ON_RTN_TRADE = 12;                // 交易
  CTP_DELETE_API = 13;                  // 删除
  CTP_REQ_INSERT_ORDER = 14;            // 发单
  CTP_REQ_CANCEL_ORDER = 15;            // 撤单
  CTP_REQ_QUERY_TRADING_ACCOUNT = 16;   // 查资金账户
  CTP_REQ_QUERY_POSITION_DETAIL = 17;   // 查持仓明细
  CTP_REQ_QUERY_COMMISSION_RATE = 18;   // 查手续费率
  CTP_REQ_QUERY_MARGIN_RATE = 19;       // 查保证金率
  CTP_REQ_CONNECT = 20;                 // 连接
  CTP_REQ_AUTHENTICATE = 21;            // 客户端验证
  CTP_REQ_SETTLEMENT_INFO_CONFIRM = 22; // 确认结算单
  CTP_REQ_QUERY_INVESTOR = 23;          // 查询投资者
  CTP_REQ_QUERY_TRANSFER_BANK = 24;     // 查询银行
  CTP_REQ_TRANSFER = 25;                // 出入金
  CTP_REQ_QUERY_ACCOUNT_REGISTER = 26;  // 查询银期绑定
  CTP_REQ_UNSUBSCRIBE_MARKET_DATA = 27; // 取消订阅
  CTP_RSP_UNSUBSCRIBE_MARKET_DATA = 28; //
  CTP_REQ_DISCONNECT = 29;              // 请求断开
  CTP_ON_RSP_ORDER_INSERT = 30;         // 发单错误
}
